--- a/IDM.html
+++ b/IDM.html
@@ -107,7 +107,7 @@
             
             <div class="leftright">
                 <div class="leftside">
-                    <img src="IDMAssets/idmlogo.svg" alt="">
+                    <img src="IDMassets/idmlogo.svg" alt="">
                 </div>
                 <div class="rightside">
                     <h1>Transforming Collaboration in India's Fragmented Interior Design Market</h1>
