--- a/GC.html
+++ b/GC.html
@@ -225,7 +225,7 @@
 
             <div class="dummydiv" style="height: 40px;"></div>
             <div class="content-block">
-                <h1>UI Exploration Focused on Discoverability</h1>
+                <h2>UI Exploration Focused on Discoverability</h2>
                 <p style="margin-bottom: 2rem;">It all started as a UI exploration to boost discoverability for the newly launched Film Room feature, designed for volleyball staff to analyze footage, highlight key moments, and share them. By focusing on small UI elements like banners and tooltips, we aimed to address the challenge of the feature being buried under multiple tabs and content.</p>
                 <div class="gridLR">
                     <div>
@@ -238,7 +238,7 @@
                     </div>
                 </div> 
                 
-                <h2>The Explorations</h2>
+                <h2 style="margin-top: 32px;">The Explorations</h2>
                 <p>These are some explorations I did to visualize how the banner might look.</p>
                 <img class="affinity" src="GCassets/Explorations.svg" alt="" loading="lazy"> 
                 <p class="sticky_note">The first banner design was chosen for its simplicity and because it was a component that could be built easily by modifying an existing design system component</p>  
