--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <li><a class="case-nav-links" href="#projects">Design Work</a></li>
           <li><a class="case-nav-links" href="freelance.html">Freelance</a></li>
           <li><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
-          <li style="margin: 0rem;"><a class="social-icons" href="https://www.linkedin.com/in/madhav-varma/" target="_blank"><i class="fa-brands fa-linkedin fa-xl"></i></a></li>
+          <li><a class="case-nav-links" style="margin-right: 0rem;" href="https://www.linkedin.com/in/madhav-varma/" target="_blank">LinkedIn</a></li>
         </ul>
 
     </section>   
