--- a/IDM.html
+++ b/IDM.html
@@ -60,7 +60,7 @@
       <li><a class="case-nav-links" href="#projects">Design Work</a></li>
       <li><a class="case-nav-links" href="freelance.html">Freelance Work</a></li>
       <li><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
-      <li style="margin: 0rem; margin:auto"><a class="social-icons" href="https://www.linkedin.com/in/madhav-varma/" target="_blank"><i class="fa-brands fa-linkedin fa-m"></i></a></li>
+      <li><a class="case-nav-links" style="margin-right: 0rem;" href="https://www.linkedin.com/in/madhav-varma/" target="_blank">LinkedIn</a></li>
     </ul>
 
 
