--- a/GC.html
+++ b/GC.html
@@ -44,27 +44,22 @@
 
 
 <section class="top-nav" id="navbar">
-        
     <div>
-        <!-- <a class="case-nav-links" href="#hero"><h1 style="font-size: large; color: #121212;" >Madhav Varma</h1></a>    -->
-        <a class="case-nav-links" href="index.html"><img src="assets/2025logo.svg" style="padding: 0 ; margin: 0;"></a> 
+        <a class="case-nav-links" href="index.html"><img src="assets/2025logo.svg" style="padding: 0; margin: 0;"></a> 
     </div>
     <input id="menu-toggle" type="checkbox" />
     <label class='menu-button-container' for="menu-toggle">
-    <div class='menu-button'></div>
+        <div class='menu-button'></div>
     </label>
     <ul class="menu">
-      <!-- <li><a class="case-nav-links" href="index.html">Home</a></li> -->
-      <!-- <li><a class="case-nav-links" href="index.html#hero">About</a></li> -->
-      <li><a class="case-nav-links" href="resume.html" target="_blank"></i>Resume</a></li>
-      <li><a class="case-nav-links" href="#projects">Design Work</a></li>
-      <li><a class="case-nav-links" href="freelance.html">Freelance Work</a></li>
-      <li><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
-      <li><a class="case-nav-links" style="margin-right: 0rem;" href="https://www.linkedin.com/in/madhav-varma/" target="_blank">LinkedIn</a></li>
+        <li><a class="case-nav-links" href="https://drive.google.com/file/d/1w-J6ykbAJ1cNtGrv02TxSAX7FrycYolq/view?usp=sharing" target="_blank">Resume</a></li>
+        <li><a class="case-nav-links" href="index.html#projects">Design Work</a></li>
+        <!-- <li><a class="case-nav-links" href="developer-portfolio.html">Developer Work</a></li> -->
+        <li><a class="case-nav-links" href="freelance.html">Freelance</a></li>
+        <li><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
+        <li><a class="case-nav-links" style="margin-right: 0rem;" href="https://www.linkedin.com/in/madhav-varma/" target="_blank">LinkedIn</a></li>
     </ul>
-
-
-</section> 
+</section>
 
 <div class="cover">
 
@@ -72,6 +67,11 @@
 
 <div class="dummydiv" id="home" style="height: 5rem;"></div>
 <div class="body">
+
+    <a href="index.html" class="floating-back-btn">
+        <i class="fa-solid fa-arrow-left"></i>
+        Back to Design Portfolio
+    </a>
 
     <div class="loader">
         <h2 style="padding: 2%; color: #fff; font-family: Gilroyextrabold;" class="load-message">Thanks For Your patience! <br> Prototypes and Images Take Time to Load 😅... </h2>
