--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </div>
     </section>
 
-    <section id="developer-banner" class="reveal">
+    <!-- <section id="developer-banner" class="reveal">
         <div class="developer-card">
             <div class="developer-cardtext">
                 <p class="industry_label" style="background-color: #121212; color: #fff;">✨AI assisted Web Development</p>
@@ -162,7 +162,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section id="footer" style="margin-top: -32px;">
         <div class="footer reveal">
